# ChangeLog for net-ftp/atftp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.25 2011/03/26 09:05:43 klausman Exp $

*atftp-0.7-r2 (26 Mar 2011)

  26 Mar 2011; Tobias Klausmann <klausman@gentoo.org> +atftp-0.7-r2.ebuild,
  +files/atftp-0.7-blockno.patch, +files/atftp-0.7-illreply.patch,
  +files/atftp-0.7-spaced_filename.patch:
  Integrate patches from bugs 321705, 322601 and 323883

  22 Mar 2011; Ulrich Mueller <ulm@gentoo.org> atftp-0.7-r1.ebuild:
  Drop PROVIDE=virtual/tftp and update blocker, bug 359125.

  26 Aug 2009; Víctor Ostorga <vostorga@gentoo.org>
  -files/atftp-0.6-security.patch, -files/atftp-0.7-gcc.patch:
  Cleaning out unused patches

  26 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org> atftp-0.7-r1.ebuild:
  Use mirror://debian/.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  08 Apr 2007; <solar@gentoo.org> atftp-0.7-r1.ebuild:
  - added ~s390

  08 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -atftp-0.6.2.ebuild,
  -atftp-0.7.ebuild:
  QA: Removed unused versions.

  19 Aug 2006; Torsten Veller <tove@gentoo.org> atftp-0.7-r1.ebuild:
  Stable on x86 (#144324).

  19 Aug 2006; Jason Wever <weeve@gentoo.org> atftp-0.7-r1.ebuild:
  Stable on SPARC.

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org> atftp-0.7-r1.ebuild:
  ppc stable, bug #144324

  18 Aug 2006; Thomas Cort <tcort@gentoo.org> atftp-0.7-r1.ebuild:
  Stable on amd64 wrt Bug #144324.

  18 Aug 2006; Markus Rothe <corsair@gentoo.org> atftp-0.7-r1.ebuild:
  Stable on ppc64

*atftp-0.7-r1 (26 May 2006)

  26 May 2006; Robin H. Johnson <robbat2@gentoo.org>
  +files/atftp-0.7-glibc24.patch, +files/atftp-0.7-password.patch,
  +files/atftp-0.7-pcre.patch, +files/atftp-0.7-tests.patch,
  +atftp-0.7-r1.ebuild:
  Major fixups, bugs: #104218 - password extension for linksys gear, #109638 -