@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/atftp-0.7-r2.ebuild,v 1.1 2011/03/26 09:05:42 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/atftp-0.7-r2.ebuild,v 1.2 2011/04/03 18:48:38 klausman Exp $
 
 inherit eutils flag-o-matic
 
@@ -16,6 +16,8 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~s390"
 IUSE="selinux tcpd readline pcre"
+
+PROVIDE=virtual/tftp
 
 DEPEND="tcpd? ( sys-apps/tcp-wrappers )
 	selinux? ( sec-policy/selinux-tftpd )
