@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/atftp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.25 2011/03/26 09:05:43 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.26 2011/04/03 18:48:38 klausman Exp $
+
+  03 Apr 2011; Tobias Klausmann <klausman@gentoo.org> atftp-0.7-r2.ebuild,
+  metadata.xml:
+  Make myself maintainer, re-add virtual
 
 *atftp-0.7-r2 (26 Mar 2011)
 
